# p2996_tests

./: CMakeLists.txt  Readme.md  clang-p2996.cmake  gcc16-reflection.cmake
scripts/: Readme.md  buildclang.sh  buildgcc.sh
test/: CMakeLists.txt  EnumToString.cpp  OperatorRefTests.cpp  PrivateMemberReflection.cpp
